--- a/app/src/main/res/layout-port/starting.xml
+++ b/app/src/main/res/layout-port/starting.xml
@@ -31,7 +31,8 @@
         android:orientation="vertical"
         android:layout_gravity="center_vertical|center_horizontal"
         android:text="Sign In"
-        android:background="#29559e"/>
+        android:background="#29559e"
+        android:onClick="fsignin"/>
 
     <Space
         android:layout_width="1dp"
@@ -39,10 +40,13 @@
 
     <Button
         android:id="@+id/Sign_Up"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="220dp"
         android:layout_height="90dp"
         android:layout_gravity="center_vertical|center_horizontal"
+        android:background="#29559e"
+        android:contextClickable="false"
         android:text="Sign Up"
-        android:background="#29559e"/>
+        android:onClick="fsignup"/>
 
 </LinearLayout>
