--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -13,5 +13,24 @@
         mapbox:mapbox_cameraTargetLng="-73.99155"
         mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
         mapbox:mapbox_cameraZoom="11" />
+    <SlidingDrawer
+        android:id="@+id/drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:handle="@+id/handle"
+        android:content="@+id/content">
+
+        <ImageView
+            android:id="@id/handle"
+            android:layout_width="88dip"
+            android:layout_height="44dip" />
+
+        <GridView
+            android:id="@id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </SlidingDrawer>
 
 </RelativeLayout>
