--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -80,5 +80,6 @@
         android:layout_centerInParent="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:text="Submit" />
+        android:text="Submit"
+        android:onClick="FSINextPage"/>
 </LinearLayout>
