--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1" android:background="##efe8e8">
+    android:weightSum="1" android:background="#efe8e8">
 
     <Space
         android:layout_width="1dp"
@@ -34,7 +34,6 @@
         android:text="First Name" />
 
     <requestFocus
-        layout_width="match_parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
