--- a/app/src/main/res/layout/starting.xml
+++ b/app/src/main/res/layout/starting.xml
@@ -16,16 +16,6 @@
         android:layout_width="1dp"
         android:layout_height="50dp"/>
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        app:srcCompat="@android:drawable/ic_delete"
-        android:layout_centerInParent="true"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center"
-        android:onClick="fsignin"/>
-
     <Space
         android:layout_width="1dp"
         android:layout_height="15dp"/>
@@ -39,5 +29,5 @@
         android:layout_centerInParent="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:onClick="fsignup"/>
+        android:onClick="FLogo"/>
 </LinearLayout>
