--- a/app/src/main/res/layout/starting.xml
+++ b/app/src/main/res/layout/starting.xml
@@ -29,5 +29,5 @@
         android:layout_centerInParent="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:onClick="FLogo"/>
+        android:onClick="fmap"/>
 </LinearLayout>
