--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -9,7 +9,7 @@
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="match_parent"
         android:layout_weight="60"
         mapbox:mapbox_cameraTargetLat="40.73581"
         mapbox:mapbox_cameraTargetLng="-73.99155"
@@ -21,7 +21,7 @@
     </com.mapbox.mapboxsdk.maps.MapView>
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/fpost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -31,19 +31,19 @@
         mapbox:srcCompat="@drawable/mapbox_info_bg_selector" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/fbuy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageButton2"
+        android:layout_alignBottom="@+id/Post"
         android:layout_centerHorizontal="true"
         mapbox:srcCompat="@drawable/mapbox_info_bg_selector" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/fsub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/imageButton3"
+        android:layout_alignTop="@+id/Buy"
         android:layout_marginEnd="34dp"
         mapbox:srcCompat="@drawable/mapbox_info_bg_selector" />
 
